--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -54,12 +54,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\201808081657345_InitialCreate.cs" />
+    <Compile Include="Migrations\201808081657345_InitialCreate.Designer.cs">
+      <DependentUpon>201808081657345_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808090014050_NoteAddStarOption.cs" />
+    <Compile Include="Migrations\201808090014050_NoteAddStarOption.Designer.cs">
+      <DependentUpon>201808090014050_NoteAddStarOption.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201808081657345_InitialCreate.resx">
+      <DependentUpon>201808081657345_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808090014050_NoteAddStarOption.resx">
+      <DependentUpon>201808090014050_NoteAddStarOption.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
